2002-09-08  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* lisp/gnus-msg.el (gnus-named-posting-styles): Defcustom.
	(gnus-posting-styles): Allow (import "...").
	(gnus-configure-posting-style): Splitted from
	gnus-configure-posting-styles.
	(gnus-summary-execute-command-with-posting-style): Fix prompt string.

	* lisp/gnus-cus.el (gnus-group-parameters): Allow (import "...") 
	in posting-styles.

2002-09-08  Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* lisp/gnus-msg.el (gnus-named-posting-styles): New variable.
	(gnus-summary-send-map): Bind "P" to
	gnus-summary-execute-command-with-posting-style.
	(gnus-configure-posting-styles): Expand named entries in
	gnus-posting-styles.
	(gnus-summary-execute-command-with-posting-style): New command.
	
2002-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* lisp/gnus-msg.el (gnus-copy-article-buffer): Set a copy buffer
	mutibyte; remove invisible and intangible test properties from a
	copied article.

2002-09-05  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* texi/ptexinfmt.el: discard @documentdescription.  Support
	@ifplaintext, @ifnotplaintext, @ifhtml.  Remove obsolete commands.
	(texinfo-format-ifhtml, texinfo-format-ifplaintext): New function.

2002-09-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu/highlight-words): Stricten
	regular expression to highlight keywords.

2002-08-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `smtpmail-send-it' for Mule 2.

2002-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-util.el (frame-parameter): New function for oldies.

2002-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-frame): Remove.

2002-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el: Fix T-gnus version number.

2002-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>
