@@ -1,5 +1,11 @@
 2002-09-08  Daiki Ueno  <ueno@unixuser.org>
 
+	* lisp/gnus-msg.el (gnus-configure-posting-styles): Follow the
+	change of arglist of gnus-configure-posting-style.
+	(gnus-configure-posting-style): Check circular import.
+	
+2002-09-08  Daiki Ueno  <ueno@unixuser.org>
+
 	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.
 
 	* lisp/gnus-msg.el (gnus-named-posting-styles): Defcustom.
